--- a/task02/randomIntends/src/main/AndroidManifest.xml
+++ b/task02/randomIntends/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="19" />
 
     <application
         android:allowBackup="true"
@@ -14,16 +14,15 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.guut.randomIntends.RandomToast"
+            android:name=".RandomToast"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="android.intent.action.ANSWER" />
-
+                <action android:name="org.guut.RandomToast" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity
-                android:name="org.guut.randomIntends.SimpleCalculator"
+                android:name=".SimpleCalculator"
                 android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
