--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@ gen/
 
 # Local configuration file (sdk path, etc)
 local.properties
+ant.properties
+build.xml
+proguard-project.txt
+project.properties
 
 # Intellij project files
 *.iml
