--- a/task04/AndroidManifest.xml
+++ b/task04/AndroidManifest.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.guut.fragments">
     <uses-sdk android:minSdkVersion="17" />
-    <application android:icon="@drawable/icon" android:label="@string/app_name"></application>
+    <application android:icon="@drawable/icon" android:label="@string/app_name">
+        <activity android:name=".fragments.MyListFragment" />
+        <activity android:name=".run.main" />
+        <activity android:name=".fragments.pictureFrame" />
+        <activity android:name=".fragments.pictureText" />
+    </application>
 </manifest>
