--- a/task03/AndroidManifest.xml
+++ b/task03/AndroidManifest.xml
@@ -9,12 +9,14 @@
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher">
         <activity
-            android:name="main"
+            android:name=".Main"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".BirthdayList" />
+        <activity android:name=".BirthdayAdd" />
     </application>
 </manifest>
