--- a/task04/AndroidManifest.xml
+++ b/task04/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.guut.fragments">
     <uses-sdk android:minSdkVersion="17" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".fragments.MyListFragment" />
+        <activity android:name=".fragments.pictureListFragment" />
         <activity android:name=".run.main" />
-        <activity android:name=".fragments.pictureFrame" />
-        <activity android:name=".fragments.pictureText" />
+        <activity android:name=".fragments.pictureFrameFragment" />
+        <activity android:name=".fragments.pictureTextFragment" />
     </application>
 </manifest>
