--- a/task04/AndroidManifest.xml
+++ b/task04/AndroidManifest.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="org.guut.fragments">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="org.guut.fragments">
     <uses-sdk android:minSdkVersion="17" />
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".fragments.pictureListFragment" />
-        <activity android:name=".run.main" />
-        <activity android:name=".fragments.pictureFrameFragment" />
-        <activity android:name=".fragments.pictureTextFragment" />
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name">
+        <activity
+            android:name=".run.main"
+            android:label="@string/app_name"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
     </application>
 </manifest>
