--- a/task05/src/main/AndroidManifest.xml
+++ b/task05/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="no.hist.itfag.books"
     android:versionCode="1"
-    android:versionName="1.0" >
-
+    android:versionName="1.0"
+    package="no.hist.itfag.books">
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="18" />
@@ -12,7 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".BookActivity"
+            android:name="no.hist.itfag.books.BookActivity"
             android:label="@string/title_activity_book" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -22,6 +21,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             </activity>
+        <activity android:name="org.guut.task05.SettingsActivity">
+            <intent-filter>
+                <action android:name="org.guut.task05.SettingsActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
