--- a/task06/src/main/AndroidManifest.xml
+++ b/task06/src/main/AndroidManifest.xml
@@ -8,10 +8,11 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"        >
+        android:label="@string/app_name"
+        android:theme="@style/app_theme">
         <activity
             android:name=".Main"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
