--- a/task07/src/main/AndroidManifest.xml
+++ b/task07/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="18" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"        >
@@ -18,5 +18,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
