--- a/task07client/src/main/AndroidManifest.xml
+++ b/task07client/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="18" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:icon="@drawable/ic_launcher"
